tests/invalid/Remainder_Invalid_2.whiley
function f(int x, real y) -> int:
    return x % y
